back color for body

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>profile-card</title>
 </head>
 <body>
     <div class="card">
-        <img src="./images/mohsen.jpg" alt="John" style="width:100%">
+        <img src="./images/mohsen.jpg" alt="Mohsen Rstami" style="width:100%">
         <h1>Mohsen Rostami</h1>
         <p class="title">Computer programmer</p>
         <p>internet</p>
